plurk.css
._lc_ {
	background-image: url('http://3.bp.blogspot.com/-wO9ve2ySrNY/U53CmVaO-0I/AAAAAAAAcHY/XGAfSJNSeEA/s1600/Beautiful-Green-Forest.jpg');
	background-size: cover;
	position: absolute !important; 
	top: 40px !important;
	left: 0 !important;
	height: inherit !important;
	margin: 0 !important;
}
._lc_ #timeline_holder {
	background-color: rgba(200,255,200,0.38);
	background-image: none;
	box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
	background-image: none;
}
._lc_ #timeline_cnt {
	height: 450px !important;
	top: 100px !important;
}
._lc_ .div_inner {
	height: 530px !important;
}
._lc_ .small_timeline, ._lc_ .small_timeline #timeline_holder {
	height: 550px !important;
}
._lc_ #timeline_bg .day_start {
	height: 0 !important;
	overflow: hidden !important;
	width: 0 !important;
}
._lc_ #timeline_holder, ._lc_ #timeline_bg {
	height: 550px !important;
}
._lc_ #bottom_line {
	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.1);
	border-bottom: 1px solid #003000 !important;
	border-top: 1px solid #888888 !important;
	top: 572px !important;
	z-index: 100;
}

._lc_ #updater, ._lc_ #music_player {
	background: none repeat scroll 0 0 rgba(0, 20, 0, 0.75);
	border: 1px solid #222222;
	box-shadow: 0 0 10px rgba(0, 10, 0, 0.75);
	top: 542px !important;
	left: 20px !important;
	transition: all 250ms ease;
}
._lc_ #updater:hover,_.lc_ #music_player:hover {
	background: none repeat scroll 0 0 rgba(0,120,0,0.7);
	box-shadow: 0 0 10px lime;      
}
._lc_ #updater *, ._lc_ #music_player * {
	color: white;
}
._lc_ #dashboard_holder {
	position: absolute;
	top: 0;
	left: 0;
	overflow: visible;
	height: 1px;
	padding: 0;
}

._lc_ #pane_plurk {
	position: fixed;
	left: -970px;
	top: 442px;
	box-shadow: 3px 3px 20px #777;
}
._lc_ #pane_plurk:hover {
	left: 0px;
}

._lc_ #plurk-dashboard {
	position: fixed;
	left: -970px;
	top:  32px;
	height: auto;
	min-height: 405px;
	max-height: 405px;
}

._lc_ #plurk-dashboard:hover {
	left: 0px;
	max-height: 460px;
}

._lc_ #plurk-dashboard, ._lc_ #pane_plurk {
	transition: all 750ms ease-out;
	background-color: rgba(24,70,21,0.3);
	width: 980px;
	z-index: 1000;
	overflow: hidden;
	position: absolute;
	box-shadow: 3px 3px 20px #777;
}
._lc_ #plurk-dashboard:hover, ._lc_ #pane_plurk:hover {
	background-color: rgba(24,70,21,0.85);
	box-shadow: 3px 3px 10px #333;
}
._lc_ footer {
	opacity: 0.3;
	transition: opacity 300ms ease;
}
._lc_ footer:hover {
	opacity: 0.9;
	transition: opacity 300ms ease;
}
._lc_ plurk_ads {
	max-height:0px !important;
	max-width:0px !important;
}
._lc_ #filter_tab a.off_tab {
	background: none repeat scroll 0 0 rgba(0,48,0,0.45);
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	border-right: 1px solid #003000 !important;
	border-style: none solid solid !important;
	border-width: medium 1px 1px !important;
	box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
	color: white !important;
	font-weight: bold;
	text-shadow: 0 0 3px black;
	transition: all 250ms ease;
}
._lc_ #filter_tab a.off_tab:hover {
	background: none repeat scroll 0 0 rgba(0,120,0,0.7);
	border-right: 1px solid #008000 !important;
	border-style: none solid solid !important;
	border-width: medium 1px 1px !important;
	box-shadow: 0 0 10px lime;      
	color: white !important;
	font-weight: bold;
	text-decoration: none;
}
._lc_ #filter_tab a.filter_selected {
	background: none repeat scroll 0 0 white;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	background: none repeat scroll 0 0 rgba(225,225,225,0.5);
	border-style: none solid solid !important;
	border-width: medium 1px 1px !important;
	box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.8);
	color: black !important;
	font-weight: bold;
	text-shadow: 0 0 3px #888888;
	transition: all 250ms ease;
}
._lc_ #filter_tab a.filter_selected:hover {
	background-color: rgba(225,225,225,1);
	box-shadow: 0 0 10px lime;      
}
._lc_ .plurk .plurk_cnt,._lc_ .new .plurk_cnt { 
	border-radius: 5px 5px 5px 5px;
	box-shadow: 0 0 8px rgba(0, 0, 0, 0.75);
	opacity: 0.8;
	width: 110%;
	z-index: 800;
	transition: all 300ms ease;
}
._lc_ .plurk_cnt:hover {
	box-shadow: 0 0 24px lime;
	opacity: 1;
}
._lc_ .plurk_cnt .text_holder {
	font-size: 110% !important;
}
._lc_ .plurk_cnt .name {
	font-size: 1.2em;
	position: absolute !important;
	text-shadow: 0 0 5px white;
	top: -22px;
	z-index: 855;
}
._lc_ .qualifier {
	padding: 5px;
	font-size: 15px;
	opacity: 0.8;
	border: none;
	transition: opacity 250ms ease;
}
._lc_ .qualifier:hover {
	opacity: 1;
}
._lc_ .q_replurks {
	padding-right: 1em;
}
._lc_ .list .plurk_cnt .name {
	position: static !important;
}
._lc_ .p_img {
	left: 0;
	position: relative !important;
	top: -10px;
	z-index: 1000;
}
._lc_ .p_img img {
	border-radius: 14px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
	height: 28px !important;
	width: 28px !important;
}
._lc_ .plurk_box {
	box-shadow: 4px 5px 7px rgba(0, 0, 0, 0.5);
}
._lc_ .plurk_box .caption {
	background-color: #CCDDCC !important;
	color: white !important;
	font-weight: bold;
	text-shadow: 0 0 3px black;
}
._lc_ .plurk_box .plurk_cnt {
	box-shadow: none;
	opacity: 1;
}
._lc_ .plurk {
	box-shadow: none;
}
._lc_ .dots .inner {
	background: none repeat scroll 0 0 transparent;
	border: medium none;
	color: black !important;
}
._lc_ .response_count {
	background: none repeat scroll 0 0 transparent !important;
	border: medium none !important;
	color: #EEFFEE !important;
	font-size: 1.8em;
	left: 10px;
	position: relative !important;
	text-shadow: 0 0 7px black;
	top: -10px;
	opacity: 0.7;
}
._lc_ .new .response_count {
	font-size: 2.2em;
	color: #FFFFBB !important;
	text-shadow: 0 0 10px lime;
	opacity: 1 !important;
}
._lc_ .unread_generic {
	color: #EEFFEE !important;
	background-color: transparent;
}
._lc_ #input_small {
	height: 1.7em !important;
	font-size: 1.2em !important;
}

._lc_ .evening, ._lc_ .night, ._lc_ .day, ._lc_ .morning { 
	background: none repeat scroll 0 0 #003000;
	border-color: #888888 #888888 !important;
	border-style: solid solid none !important;
	border-top-left-radius: 5px;
	border-top-right-radius: 5px;
	border-width: 1px 1px medium !important;
	box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.8);
	top: 530px !important; 
}
._lc_ #time_show span { 
	color: white !important; 
}
._lc_ .bday {
	z-index: 1000;
}
._lc_ #dynamic_logo img {
	width: 0; 
	height: 0;
	padding: 0;
	margin: 0;
	overflow: hidden; 
}

